created navigation header and added basic html for about page

--- a/public/about.html
+++ b/public/about.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Home - Peter's Place</title>
+        <title>About - Peter's Place</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/myStyles.css">
@@ -24,7 +24,7 @@
 
         <main>
 
-            <h1>Home Page</h1>
+            <h1>About Page</h1>
             <p>The content of the website should serve as a personal and professional portfolio about yourself, your current studies, and interests. Consider it as a means of trying out ideas for how you may wish to create your own professional portfolio at the end of your studies.</p>
         
         </main>
