add intital content to home page

--- a/public/chat.html
+++ b/public/chat.html
@@ -18,7 +18,7 @@
     </div>
       
     <header id="chatheader">
-        <img id="profilepic" src="/img/profile.jpg" alt="Image of Peter's charming face &#128521" width=50px height=50px>
+        <a href="secret.html"><img id="profilepic" src="/img/profile.jpg" alt="Peter's charming face against a blue sky &#128521" width=50px height=50px></a>
         <nav id="NavigationLinksBar">
             <ul id="NavigationUnorderedLinks">
                 <li class="NavigationLink"><a class="NavigationText" href="index.html">&#127968 Home</a></li>
@@ -26,7 +26,7 @@
                 <li class="NavigationLink"><a class="NavigationText" href="chat.html">&#128226 Chat</a></li>
             </ul>
         </nav>            
-    </header>    
+    </header>  
 
 
     <br>
