--- a/public/about.html
+++ b/public/about.html
@@ -12,7 +12,7 @@
     <body>
         
         <header>
-            <img id="profilepic" src="/img/profile.jpg" alt="Image of Peter's charming face &#128521" width=50px height=50px>
+            <a href="secret.html"><img id="profilepic" src="/img/profile.jpg" alt="Peter's charming face against a blue sky &#128521" width=50px height=50px></a>
             <nav id="NavigationLinksBar">
                 <ul id="NavigationUnorderedLinks">
                     <li class="NavigationLink"><a class="NavigationText" href="index.html">&#127968 Home</a></li>
