add skip to main content button for accessibility

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,10 @@
     </head>
     <body>
         
+
+
         <header>
+            <p><a class="skip" href="#main">Skip to main content</a></p>
             <a href="secret.html"><img id="profilepic" src="/img/profile.jpg" alt="Peter's charming face against a blue sky &#128521" width=50px height=50px></a>
             <nav id="NavigationLinksBar">
                 <ul id="NavigationUnorderedLinks">
@@ -22,7 +25,7 @@
             </nav>            
         </header>
 
-        <main>
+        <main id="main">
 
             <div id="intropara">
               
