--- a/public/about.html
+++ b/public/about.html
@@ -12,6 +12,7 @@
     <body>
         
         <header>
+            <p><a class="skip" href="#main">Skip to main content</a></p>
             <a href="secret.html"><img id="profilepic" src="/img/profile.jpg" alt="Peter's charming face against a blue sky &#128521" width=50px height=50px></a>
             <nav id="NavigationLinksBar">
                 <ul id="NavigationUnorderedLinks">
@@ -25,6 +26,27 @@
         <main>
 
             <h1>About Page</h1>
+
+            <h2>Current Studies</h2>
+                <ul>
+                    <li>Geography</li>
+                    <li>Sociology</li>
+                    <li>Computing Science</li>
+                    <li>Arts and the Environment</li>
+                </ul>
+
+            <h2>Interests</h2>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>            
+                </ul>
+
+
+            <h2>Hobbies</h2>
+
+
             <p>The content of the website should serve as a personal and professional portfolio about yourself, your current studies, and interests. Consider it as a means of trying out ideas for how you may wish to create your own professional portfolio at the end of your studies.</p>
         
         </main>
