--- a/public/chat.html
+++ b/public/chat.html
@@ -18,6 +18,7 @@
     </div>
       
     <header id="chatheader">
+        <p><a class="skip" href="#main">Skip to main content</a></p>
         <a href="secret.html"><img id="profilepic" src="/img/profile.jpg" alt="Peter's charming face against a blue sky &#128521" width=50px height=50px></a>
         <nav id="NavigationLinksBar">
             <ul id="NavigationUnorderedLinks">
