--- a/public/chat.html
+++ b/public/chat.html
@@ -19,7 +19,7 @@
       
     <header id="chatheader">
         <p><a class="skip" href="#main">Skip to main content</a></p>
-        <a href="secret.html"><img id="profilepic" src="/img/profile.jpg" alt="Peter's charming face against a blue sky &#128521" width=50px height=50px></a>
+        <img id="profilepic" src="/img/profile.jpg" alt="Peter's charming face against a blue sky &#128521" width=50px height=50px>
         <nav id="NavigationLinksBar">
             <ul id="NavigationUnorderedLinks">
                 <li class="NavigationLink"><a class="NavigationText" href="index.html">&#127968 Home</a></li>
@@ -46,7 +46,7 @@
       <form class="message_form">
         <input type="text" class="message_form__input" placeholder="Type a message" />
         <button class="message_form__button" type="submit">
-          Enter
+          Send Message
         </button>
       </form>
     </div>
