--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
         <header>
             <p><a class="skip" href="#main">Skip to main content</a></p>
-            <a href="secret.html"><img id="profilepic" src="/img/profile.jpg" alt="Peter's charming face against a blue sky &#128521" width=50px height=50px></a>
+            <img id="profilepic" src="/img/profile.jpg" alt="Peter's charming face against a blue sky &#128521" width=50px height=50px>
             <nav id="NavigationLinksBar">
                 <ul id="NavigationUnorderedLinks">
                     <li class="NavigationLink"><a class="NavigationText" href="index.html">&#127968 Home</a></li>
