move content to home page and add flex

--- a/public/chat.html
+++ b/public/chat.html
@@ -30,8 +30,8 @@
     </header>  
 
 
-    <br>
-    <hr>
+    <!-- <br> -->
+    <!-- <hr> -->
 
 
 
@@ -42,6 +42,7 @@
           
         
       </div>
+      <div class="user__leaves"></div>
 
       <form class="message_form">
         <input type="text" class="message_form__input" placeholder="Type a message" />
