--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,32 @@
                     <p>My name is <u>Peter Leeson</u> (he/him) and I am a first year student at the <b>University of Aberdeen</b>. Thank you for coming to my website! This is a little collection of my hobbies, interests, and current studies. Please feel free to explore and find out a bit about my life.</p>
                 </div>
 
+                <div id="informationtextcontainer">
+                    <div class="informationtext">
+                        <h2>Current Studies</h2>
+                            <ul>
+                                <li>Geography</li>
+                                <li>Sociology</li>
+                                <li>Computing Science</li>
+                                <li>Arts and the Environment</li>
+                            </ul>
+                    </div>
+                    <div class="informationtext">
+                    <h2>Interests</h2>
+                        <ul>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>            
+                        </ul>
+                    </div>
+                    <div class="informationtext">
+                        <h2>Hobbies</h2>
+                    </div>
+                </div>
+
+
+
                 <div id="introimagecontainer">
                     <img id="introimage" src="/img/standingphoto.jpg" alt="Peter standing on a rocky beach wearing a coat. There are faint flakes of snow." width=333px height=593px>
                 </div>
