--- a/public/chat.html
+++ b/public/chat.html
@@ -22,9 +22,9 @@
         <img id="profilepic" src="/img/profile.jpg" alt="Peter's charming face against a blue sky &#128521" width=50px height=50px>
         <nav id="NavigationLinksBar">
             <ul id="NavigationUnorderedLinks">
-                <li class="NavigationLink"><a class="NavigationText" href="index.html">&#127968 Home</a></li>
-                <li class="NavigationLink"><a class="NavigationText" href="about.html">&#128203 About</a></li>
-                <li class="NavigationLink"><a class="NavigationText" href="chat.html">&#128226 Chat</a></li>
+                <a class="NavigationText" href="index.html"><li class="NavigationLink">&#127968 Home</li></a>
+                <a class="NavigationText" href="about.html"><li class="NavigationLink">&#128203 About</li></a>
+                <a class="NavigationText" href="chat.html"><li class="NavigationLink">&#128226 Chat</li></a>
             </ul>
         </nav>            
     </header>  
