add some images to home page

--- a/public/index.html
+++ b/public/index.html
@@ -35,35 +35,45 @@
                 </div>
 
                 <div id="informationtextcontainer">
-                    <details class="informationtext">
-                        <summary class="informationtextheader"><h2>Current Studies</h2></summary>
-                            <h3>Geography:</h3>
+                    
+                    <details class="informationtext" id="currentstudies">
+                        <summary class="informationtextheader"><h2 class="pointertext">&#128218 Current Studies</h2></summary>
+                            <h3>Geography &#127757</h3>
                             <p>I am currently doing a 4 year Geography MA course at the University of Aberdeen. This term I have been learning about the Anthropocene, and the impact that human activity has had on the earth’s natural processes.</p>
-                            <h3>Sociology:</h3>
+                            <h3>Sociology &#128106</h3>
                             <p>Sociology is one of my 3 elective courses for this term. It has largely focused on the construction of the self in society, and the growth of consumerism. I found the lectures and readings on the formation and influence of gender particularly interesting.</p>
-                            <h3>Computing Science:</h3>
+                            <h3>Computing Science &#128187</h3>
                             <p>Another elective course, this term I have learned to construct websites and web apps using a variety of JavaScript, HTML, and CSS code. The knowledge from this course has helped me in the construction of this website, and its associated functions.</p>
-                            <h3>Arts and the Environment (Sixth Century Course):</h3>
+                            <h3>Arts and the Environment (Sixth Century Course) &#127748</h3>
                             <p>This course has been an interesting exploration into the intersection of environmental activism and the arts. We have analysed the use of photography, sculptures, music, and film to represent the environment, and the consequences of certain portrayals. It has made me re-evaluate my position on the importance of the arts as a force for political change in society.</p>
                     </details>
 
-                    <details class="informationtext">
-                        <summary class="informationtextheader"><h2>Hobbies</h2></summary>
-                        <h3>Singing:</h3>
+                    <br>
+
+                    <details class="informationtext" id="hobbies">
+                        <summary class="informationtextheader"><h2 class="pointertext">&#127929 Hobbies</h2></summary>
+                        <h3>Singing &#127925</h3>
                         <p>Singing has been a part of my life since a young age. Throughout my years of education I joined multiple Chamber, Chapel, and Gospel choirs. This has taken me to sing at a variety of different venues and has introduced me to many new genres of music. By far the most memorable experience was singing the Messiah at the Royal Albert Hall. At University I have continued this passion by joining the Aberdeen Show Choir, which has combined my love of music with an interest in dancing which I have found both challenging and rewarding.</p>
-                        <h3>Violin:</h3>
+                        <h3>Violin &#127931</h3>
                         <p>I have been playing the violin since I was 6 years old, inspired by the musical talent of my siblings. Practice and dedication of this beautiful instrument has taken me to a Merit level of Grade 7 ABRSM. I have performed in both larger orchestras and smaller quartets, the latter allowing me to develop my feel for the musical rhythm.</p>
-                        <h3>Tennis:</h3>
+                        <h3>Tennis &#127934</h3>
                         <p>While I have never played professionally or in any specific leagues, tennis has always provided an outlet though which I can channel my athletic spirit. I often play together with my family on weekends, giving us time to connect and develop our skills. As a result of this passion, I am an avid fan of Wimbledon and look forward to watching the yearly tournament.</p>
                     </details>
 
-                    <details class="informationtext">
-                        <summary class="informationtextheader"><h2>Interests</h2></summary>
-                        <h3>Equality Activism:</h3>
+                    <br>
+
+                    <details class="informationtext" id="interests">
+                        <summary class="informationtextheader"><h2 class="pointertext">&#128269 Interests</h2></summary>
+                        <h3>Equality Activism &#129309</h3>
                         <p>I am a strong supporter of the promotion of equality and diversity within society. This has led me to join committees throughout different parts of my education. Within these groups I have helped spread awareness on the experience of marginalised groups, and have vocally spoken up against discriminatory policies.</p>
-                        <h3>Sound Production and Design:</h3>
+                        <img id="equalityslideimg" src="/img/equalityslide.jpg" alt="t2bd" width=444px height=333px>
+                        <h3>Sound Production and Design &#127917</h3>
                         <p>In secondary school my interest in both technology and music combined when I joined the theatre’s ‘Tech Crew.’ This allowed me to explore the roles involved in the creation of stage production, leading me to take the position of sound manager in a number of productions. I also took the opportunity to explore other areas including set design, lighting, and working as a camera operator.</p>
+                        <img id="techcrewimg" src="/img/techcrew.jpg" alt="tbd" width=333px height=444px>
                     </details>
+
+                    <br>
+
                 </div>
 
 
