fix validation errors

--- a/public/about.html
+++ b/public/about.html
@@ -13,12 +13,12 @@
         
         <header>
             <p><a class="skip" href="#main">Skip to main content</a></p>
-            <img id="profilepic" src="/img/profile.jpg" alt="Peter's charming face against a blue sky &#128521" width=50px height=50px>
+            <img id="profilepic" src="/img/profile.jpg" alt="Peter's charming face against a blue sky &#128521;" width=50 height=50>
             <nav id="NavigationLinksBar">
                 <ul id="NavigationUnorderedLinks">
-                    <li class="NavigationLink"><a class="NavigationText" href="index.html">&#127968 Home</a></li>
-                    <li class="NavigationLink"><a class="NavigationText" href="about.html">&#128203 About</a></li>
-                    <li class="NavigationLink"><a class="NavigationText" href="chat.html">&#128226 Chat</a></li>
+                    <li class="NavigationLink"><a class="NavigationText" href="index.html">&#127968; Home</a></li>
+                    <li class="NavigationLink"><a class="NavigationText" href="about.html">&#128203; About</a></li>
+                    <li class="NavigationLink"><a class="NavigationText" href="chat.html">&#128226; Chat</a></li>
                 </ul>
             </nav>            
         </header>
@@ -27,10 +27,14 @@
 
             <h1>About Page</h1>
 
+            <p>Further details, supplementary and background information on the
+topic of your website</p>
+            <ul>
+                <li>Includes a brief summary of how the site was developed (you can use
+aspects of your submission report but not the full report in its entirety)</li>
+            </ul>
 
-
-
-            <p>The content of the website should serve as a personal and professional portfolio about yourself, your current studies, and interests. Consider it as a means of trying out ideas for how you may wish to create your own professional portfolio at the end of your studies.</p>
+            <hr>
         
         </main>
 
