--- a/public/chat.html
+++ b/public/chat.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat - Peter's Place</title>
-    <link rel="stylesheet" href="/css/myStyles.css" />
+    <link rel="stylesheet" href="/css/myStyles.css">
   </head>
   <body>
 
@@ -19,12 +19,12 @@
       
     <header id="chatheader">
         <p><a class="skip" href="#main">Skip to main content</a></p>
-        <img id="profilepic" src="/img/profile.jpg" alt="Peter's charming face against a blue sky &#128521" width=50px height=50px>
+        <img id="profilepic" src="/img/profile.jpg" alt="Peter's charming face against a blue sky &#128521;" width=50 height=50>
         <nav id="NavigationLinksBar">
             <ul id="NavigationUnorderedLinks">
-                <a class="NavigationText" href="index.html"><li class="NavigationLink">&#127968 Home</li></a>
-                <a class="NavigationText" href="about.html"><li class="NavigationLink">&#128203 About</li></a>
-                <a class="NavigationText" href="chat.html"><li class="NavigationLink">&#128226 Chat</li></a>
+                <li class="NavigationLink"><a class="NavigationText" href="index.html">&#127968; Home</a></li>
+                <li class="NavigationLink"><a class="NavigationText" href="about.html">&#128203; About</a></li>
+                <li class="NavigationLink"><a class="NavigationText" href="chat.html">&#128226; Chat</a></li>
             </ul>
         </nav>            
     </header>  
@@ -45,7 +45,7 @@
       <div class="user__leaves"></div>
 
       <form class="message_form">
-        <input type="text" class="message_form__input" placeholder="Type a message" />
+        <input type="text" class="message_form__input" placeholder="Type a message">
         <button class="message_form__button" type="submit">
           Send Message
         </button>
