--- a/public/index.html
+++ b/public/index.html
@@ -15,12 +15,12 @@
 
         <header>
             <p><a class="skip" href="#main">Skip to main content</a></p>
-            <img id="profilepic" src="/img/profile.jpg" alt="Peter's charming face against a blue sky &#128521" width=50px height=50px>
+            <img id="profilepic" src="/img/profile.jpg" alt="Peter's charming face against a blue sky &#128521;" width=50 height=50>
             <nav id="NavigationLinksBar">
                 <ul id="NavigationUnorderedLinks">
-                    <a class="NavigationText" href="index.html"><li class="NavigationLink">&#127968 Home</li></a>
-                    <a class="NavigationText" href="about.html"><li class="NavigationLink">&#128203 About</li></a>
-                    <a class="NavigationText" href="chat.html"><li class="NavigationLink">&#128226 Chat</li></a>
+                    <li class="NavigationLink"><a class="NavigationText" href="index.html">&#127968; Home</a></li>
+                    <li class="NavigationLink"><a class="NavigationText" href="about.html">&#128203; About</a></li>
+                    <li class="NavigationLink"><a class="NavigationText" href="chat.html">&#128226; Chat</a></li>
                 </ul>
             </nav>            
         </header>
@@ -37,39 +37,39 @@
                 <div id="informationtextcontainer">
                     
                     <details class="informationtext" id="currentstudies">
-                        <summary class="informationtextheader"><h2 class="pointertext">&#128218 Current Studies</h2></summary>
-                            <h3>Geography &#127757</h3>
+                        <summary class="informationtextheader"><h2 class="pointertext">&#128218; Current Studies</h2></summary>
+                            <h3>Geography &#127757;</h3>
                             <p>I am currently doing a 4 year Geography MA course at the University of Aberdeen. This term I have been learning about the Anthropocene, and the impact that human activity has had on the earth’s natural processes.</p>
-                            <h3>Sociology &#128106</h3>
+                            <h3>Sociology &#128106;</h3>
                             <p>Sociology is one of my 3 elective courses for this term. It has largely focused on the construction of the self in society, and the growth of consumerism. I found the lectures and readings on the formation and influence of gender particularly interesting.</p>
-                            <h3>Computing Science &#128187</h3>
+                            <h3>Computing Science &#128187;</h3>
                             <p>Another elective course, this term I have learned to construct websites and web apps using a variety of JavaScript, HTML, and CSS code. The knowledge from this course has helped me in the construction of this website, and its associated functions.</p>
-                            <h3>Arts and the Environment (Sixth Century Course) &#127748</h3>
+                            <h3>Arts and the Environment (Sixth Century Course) &#127748;</h3>
                             <p>This course has been an interesting exploration into the intersection of environmental activism and the arts. We have analysed the use of photography, sculptures, music, and film to represent the environment, and the consequences of certain portrayals. It has made me re-evaluate my position on the importance of the arts as a force for political change in society.</p>
                     </details>
 
                     <br>
 
                     <details class="informationtext" id="hobbies">
-                        <summary class="informationtextheader"><h2 class="pointertext">&#127929 Hobbies</h2></summary>
-                        <h3>Singing &#127925</h3>
+                        <summary class="informationtextheader"><h2 class="pointertext">&#127929; Hobbies</h2></summary>
+                        <h3>Singing &#127925;</h3>
                         <p>Singing has been a part of my life since a young age. Throughout my years of education I joined multiple Chamber, Chapel, and Gospel choirs. This has taken me to sing at a variety of different venues and has introduced me to many new genres of music. By far the most memorable experience was singing the Messiah at the Royal Albert Hall. At University I have continued this passion by joining the Aberdeen Show Choir, which has combined my love of music with an interest in dancing which I have found both challenging and rewarding.</p>
-                        <h3>Violin &#127931</h3>
+                        <h3>Violin &#127931;</h3>
                         <p>I have been playing the violin since I was 6 years old, inspired by the musical talent of my siblings. Practice and dedication of this beautiful instrument has taken me to a Merit level of Grade 7 ABRSM. I have performed in both larger orchestras and smaller quartets, the latter allowing me to develop my feel for the musical rhythm.</p>
-                        <h3>Tennis &#127934</h3>
+                        <h3>Tennis &#127934;</h3>
                         <p>While I have never played professionally or in any specific leagues, tennis has always provided an outlet though which I can channel my athletic spirit. I often play together with my family on weekends, giving us time to connect and develop our skills. As a result of this passion, I am an avid fan of Wimbledon and look forward to watching the yearly tournament.</p>
                     </details>
 
                     <br>
 
                     <details class="informationtext" id="interests">
-                        <summary class="informationtextheader"><h2 class="pointertext">&#128269 Interests</h2></summary>
-                        <h3>Equality Activism &#129309</h3>
+                        <summary class="informationtextheader"><h2 class="pointertext">&#128269; Interests</h2></summary>
+                        <h3>Equality Activism &#129309;</h3>
                         <p>I am a strong supporter of the promotion of equality and diversity within society. This has led me to join committees throughout different parts of my education. Within these groups I have helped spread awareness on the experience of marginalised groups, and have vocally spoken up against discriminatory policies.</p>
-                        <img id="equalityslideimg" src="/img/equalityslide.jpg" alt="t2bd" width=444px height=333px>
-                        <h3>Sound Production and Design &#127917</h3>
+                        <img id="equalityslideimg" src="/img/equalityslide.jpg" alt="A monitor displaying a poster about respecting gender identity." width=444 height=333>
+                        <h3>Sound Production and Design &#127917;</h3>
                         <p>In secondary school my interest in both technology and music combined when I joined the theatre’s ‘Tech Crew.’ This allowed me to explore the roles involved in the creation of stage production, leading me to take the position of sound manager in a number of productions. I also took the opportunity to explore other areas including set design, lighting, and working as a camera operator.</p>
-                        <img id="techcrewimg" src="/img/techcrew.jpg" alt="tbd" width=333px height=444px>
+                        <img id="techcrewimg" src="/img/techcrew.jpg" alt="The back of a video camera, pointed towards a painted stage." width=333 height=444>
                     </details>
 
                     <br>
@@ -79,12 +79,18 @@
 
 
                 <div id="introimagecontainer">
-                    <img id="introimage" src="/img/standingphoto.jpg" alt="Peter standing on a rocky beach wearing a coat. There are faint flakes of snow." width=333px height=593px>
+                    <img id="standingphoto" src="/img/standingphoto.jpg" alt="Peter standing on a rocky beach wearing a coat. There are faint flakes of snow." width=333 height=593>
                 </div>
+
+                <br>
 
             </div>
 
         </main>
+
+        <footer>
+            <p><i>© Copyright 2022, Peter Leeson.</i></p>
+        </footer>
 
         <script src="js/client.js" async defer></script>
 
