CSS styling to chat side panel

--- a/public/chat.html
+++ b/public/chat.html
@@ -12,7 +12,7 @@
 
     <div class="sidenav">
         <div class="inbox__people">
-            <h4>Active users</h4>
+            <h4>&#128279; Active Users</h4>
         </div>
 
     </div>
@@ -30,8 +30,8 @@
     </header>  
 
 
-    <!-- <br> -->
-    <!-- <hr> -->
+    <!-- <br>
+    <hr> -->
 
 
 
@@ -42,7 +42,6 @@
           
         
       </div>
-      <div class="user__leaves"></div>
 
       <form class="message_form">
         <input type="text" class="message_form__input" placeholder="Type a message">
