add typing indicator to chat

--- a/public/chat.html
+++ b/public/chat.html
@@ -37,11 +37,13 @@
 
     <div class="content">
       <div class="messages__history"></div>
+      <div class="user__typing"></div>
       <div class="fallback"></div>
       <div class="inbox__messages">
           
         
       </div>
+
 
       <form class="message_form">
         <input type="text" class="message_form__input" placeholder="Type a message">
