refined home page text

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
               
                 <div id="introtextcontainer">
                     <h1>Hello and Welcome!</h1>
-                    <p>My name is <u>Peter Leeson</u> (he/him) and I am a first year student at the <b>University of Aberdeen</b>. Thank you for coming to my website! This is a little collection of my hobbies, interests, and current studies. Please feel free to explore and find out a bit about my life.</p>
+                    <p>My name is <b>Peter Leeson</b> (he/him) and I am a first year student at the <b>University of Aberdeen</b>. Thank you for coming to my website! This is a little collection of my <a href="#hobbies">hobbies</a>, <a href="#interests">interests</a>, and <a href="#currentstudies">current studies</a>. Please feel free to explore and find out a bit about my life.</p>
                 </div>
 
                 <div id="informationtextcontainer">
@@ -44,7 +44,7 @@
                             <p>Sociology is one of my 3 elective courses for this term. It has largely focused on the construction of the self in society, and the growth of consumerism. I found the lectures and readings on the formation and influence of gender particularly interesting.</p>
                             <h3>Computing Science &#128187;</h3>
                             <p>Another elective course, this term I have learned to construct websites and web apps using a variety of JavaScript, HTML, and CSS code. The knowledge from this course has helped me in the construction of this website, and its associated functions.</p>
-                            <h3>Arts and the Environment (Sixth Century Course) &#127748;</h3>
+                            <h3>Arts for a More Sustainable Planet (Sixth Century Course) &#127748;</h3>
                             <p>This course has been an interesting exploration into the intersection of environmental activism and the arts. We have analysed the use of photography, sculptures, music, and film to represent the environment, and the consequences of certain portrayals. It has made me re-evaluate my position on the importance of the arts as a force for political change in society.</p>
                     </details>
 
